--- a/public/memo.html
+++ b/public/memo.html
@@ -66,6 +66,7 @@
                 <li><a href="file.html">file</a></li>
                 <li><a href="memo.html">memo</a></li>
                 <li><a href="settings.html">Settings</a></li>
+                <li><a href="../board.html">board list</a></li>
             </ul>
         </nav>
     </header>
