--- a/public/board.html
+++ b/public/board.html
@@ -10,6 +10,7 @@
             padding-right: 5px;
         }
     </style>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>lan tool</title>
