--- a/public/file.html
+++ b/public/file.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <script>
         async function get_file_list() {
             const response = await fetch('/get_file', { method: 'POST'});
