--- a/public/memo.html
+++ b/public/memo.html
@@ -9,6 +9,7 @@
             left:20%
         }
     </style>
+    <link rel="stylesheet" href="style.css">
     <script>
         async function get_memo_list() {
             const response = await fetch('/memo', { method: 'GET'});
